# linux_dyn_offset

./: .gitmodules  CMakeLists.txt  README.md  android_sections.cpp  android_sections_gen.cpp  generateParse.py  heuristic_list.json  heuristic_routines.h
Android/: CMakeLists.txt  android_sections.cpp  android_sections_gen.cpp  android_variables.cpp  huawei.lya-l29_9.1.0.300.constants.json
Linux/: CMakeLists.txt  Linux_dyn_offset.cpp
Linux/amd64/: Linux_dyn_offset_arch.cpp
Linux/arm64/: Linux_dyn_offset_arch.cpp
common/: finddyn.cpp  kdlsym.cpp  sections.cpp  structs.cpp
common/amd64/: sections_arch.cpp
common/arm64/: sections_arch.cpp
vxworks/: linksys-5.4.2.constants.json
